Some servers don't have Apache Header Module enabled and this isn't 100% required, so check before trying to use it.
git-svn-id: http://dabr.googlecode.com/svn/trunk@272 760c5f7a-8625-11dd-9205-735403a6da14

--- a/.htaccess
+++ b/.htaccess
@@ -4,7 +4,9 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php?q=$1 [L,QSA]
 
-# 1 week cache
-<FilesMatch "\.(png|ico)$">
-Header set Cache-Control "max-age=604800, public"
-</FilesMatch>
+<IfModule header_module>
+	# 1 week cache
+	<FilesMatch "\.(png|ico)$">
+	Header set Cache-Control "max-age=604800, public"
+	</FilesMatch>
+</IfModule>
